--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
       </div>
     </section>
-  
+
     <section class="trial">
       <h1 class="section--header">
         Start your 7-day trial with <span class="iq">Braincycle</span>
@@ -754,7 +754,10 @@
         <li>Privacy Policy</li>
         <li>Terms Of Service</li>
       </ul>
-      <p class="copyright">&copy; copyright reserved 2024</p>
+      <p class="copyright">
+        designed by Yusuf Hassan. Derivative of Newcore Technologies, Copyright
+        &copy; 2024. Inc. All rights
+      </p>
     </footer>
 
     <script
